@@ -1,5 +1,6 @@
 3.7.0
  - feat: subtract linear slope from indentation curve (#22)
+ - ref: return normalization reference type for details from POC and preproc
  - setup: bump scipy to 1.10.0 due to memory leak vulnerability
 3.6.0
  - tests: make tests less strict and some cleanup
